--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,7 @@ jobs:
         if-no-files-found: error
 
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - uses: actions/download-artifact@v7
