--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -58,10 +58,13 @@ jobs:
         getent hosts ${{ vars.SFTP_HOSTNAME }} >/dev/null 2>&1 \
           && echo "${{ vars.SFTP_HOSTNAME }} resolved" \
           || { echo "timeout"; exit 1; }
-
     - uses: webfactory/ssh-agent@v0.9.0
       with:
         ssh-private-key: ${{ secrets.SFTP_PRIVATE_KEY }}
+    - name: Import host keys
+      env:
+        HOST_KEYS: ${{ vars.SFTP_HOST_KEYS }}
+      run: printf "$HOST_KEYS" > ~/.ssh/known_hosts
     - name: Copy files to server
       run: |
         sftp ${{ secrets.SFTP_USERNAME }}@${{ vars.SFTP_HOSTNAME }} <<EOF
