Replace DNS check with TCP reachability check

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,19 +47,18 @@ jobs:
       env:
         SETUP_KEY: ${{ secrets.NETBIRD_SETUP_KEY }}
       run: netbird up --setup-key=${SETUP_KEY}
-    - name: Wait for DNS resolution
+    - name: Wait until reachable
       shell: bash
       run: |
+        PORT=22
         COUNTER=0
-        until getent hosts ${{ vars.SFTP_HOSTNAME }} >/dev/null 2>&1 || [ "$COUNTER" -ge 60 ]; do
+        until nc -z "${{ vars.SFTP_HOSTNAME }}" "$PORT" >/dev/null 2>&1 || [ "$COUNTER" -ge 60 ]; do
           sleep 1
           ((++COUNTER))
         done
-        getent hosts ${{ vars.SFTP_HOSTNAME }} >/dev/null 2>&1 \
-          && echo "${{ vars.SFTP_HOSTNAME }} resolved" \
+        nc -z "${{ vars.SFTP_HOSTNAME }}" "$PORT" >/dev/null 2>&1 \
+          && echo "${{ vars.SFTP_HOSTNAME }}:$PORT reachable" \
           || { echo "timeout"; exit 1; }
-    - name: Wait for network connection
-      run: ping -w 30 -c 1 ${{ vars.SFTP_HOSTNAME }}
     - uses: webfactory/ssh-agent@v0.9.0
       with:
         ssh-private-key: ${{ secrets.SFTP_PRIVATE_KEY }}
