--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -62,7 +62,7 @@ jobs:
     - name: Import host keys
       env:
         HOST_KEYS: ${{ vars.SFTP_HOST_KEYS }}
-      run: printf "$HOST_KEYS" > ~/.ssh/known_hosts
+      run: mkdir -p ~/.ssh && printf "$HOST_KEYS" >> ~/.ssh/known_hosts
     - uses: webfactory/ssh-agent@v0.9.0
       with:
         ssh-private-key: ${{ secrets.SFTP_PRIVATE_KEY }}
