--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -62,11 +62,14 @@ jobs:
     - uses: webfactory/ssh-agent@v0.9.0
       with:
         ssh-private-key: ${{ secrets.SFTP_PRIVATE_KEY }}
+    - name: Convert webroot to POSIX path
+      id: vars
+      run: WEBROOT=${{ vars.IIS_WEBROOT }} && echo "posix_webroot=${WEBROOT//\\//}" >> $GITHUB_OUTPUT
     - name: Copy files to server
       run: |
         sftp ${{ secrets.SFTP_USERNAME }}@${{ vars.SFTP_HOSTNAME }} <<EOF
-        mkdir /${{ vars.IIS_WEBROOT }}${{ steps.vars.outputs.sha_short }}/
-        put -R . /${{ vars.IIS_WEBROOT }}${{ steps.vars.outputs.sha_short }}/
+        mkdir /${{ steps.vars.outputs.posix_webroot }}${{ steps.vars.outputs.sha_short }}/
+        put -R . /${{ steps.vars.outputs.posix_webroot }}${{ steps.vars.outputs.sha_short }}/
         exit
         EOF
     - name: Copy appsettings.json and change path
